changed working directory of cardshifter-core tests, and cleaned up old test run configuration